src/modules/dashboard/components/Members/MembersTitle.css
.titleContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 35px;
  border-bottom: 1px solid var(--temp-grey-13);
}

.titleContainer > h3 {
  max-width: 250px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.titleLeft {
  display: flex;
  align-items: center;
}

.titleLeft > h3 {
  margin-bottom: 0px;
}

.titleLeft > form > div > div > div > button {
  padding: 0;
  border: 0;
  font-size: var(--size-medium);
  color: var(--dark);
}

.titleSelect {
  margin-left: 6px;
}

.searchContainer {
  margin-top: 15px;

  /* pull down to cover HR */
  margin-bottom: -1px;
  width: 300px;
  position: relative;
  border-bottom: 1px solid var(--temp-grey-13);

  &:hover {
    border-bottom: 1px solid var(--primary);
  }
}

.icon {
  height: 30px;
  width: 30px;
  position: absolute;
  top: 50%;
  right: 2px;
  z-index: 1;
  transform: translateY(-50%);
}

.input {
  padding: 4px;
  height: 32px;
  width: 100%;
  position: relative;
  z-index: 2;
  border: 0;
  background-color: transparent;
  font-size: var(--size-normal);
  line-height: 32px;
  color: var(--text);
  outline: none;
  letter-spacing: var(--spacing-normal);
  transition: border-color 0.1s ease-in;

  &::placeholder {
    font-size: var(--size-normal);
    color: var(--grey-4);
    letter-spacing: var(--spacing-normal);
  }
}

.clearButton {
  composes: button from '~styles/reset.css';
  position: absolute;
  top: 5px;
  right: 30px;
  z-index: 2;
}

